
[metadata]
name = livemetrics
version = attr: livemetrics.__version__
author = attr: livemetrics.__author__
author_email = olivier.heurtier@idemia.com
license = CeCILL-C
description = LiveMetrics collector and publisher for Python applications
long_description = file: README.rst
url = https://github.com/idemia/python-livemetrics
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: CeCILL-C Free Software License Agreement (CECILL-C)

[options]
packages = livemetrics
    livemetrics.publishers
    livemetrics.dashboard
include_package_data = True
python_requires = >=3.8
test_suite = 
    tests

[options.extras_require]
aiohttp = aiohttp
django = django
flask = flask
dashboard =
    jinja2
    PyYAML
    aiohttp

[options.entry_points]
console_scripts =
    livemetrics-dashboard = livemetrics.dashboard.dashboard:main
 
